Add Intellij Installation Instructions to REAME.md (#2)
* Add Intellij Installation Instructions to REAME.md

* Update README.md

* Update README.md

* Update README.md