@@ -21,27 +21,56 @@ The `JAVA PROJECTS` view (in Visual Studio Code) allows you to manage your depen
 
 There are a lot of ways to build and execute this application. In every case, you have to download and install the Java SDK and the JavaFX SDK as written on [Getting Started with JavaFX](https://openjfx.io/openjfx-docs/#install-java).
 
-Following you will find the process description for this two options
-- Java native (from the Command Line)
-- Visual Studio Code
-
-
-### Java native
+<details>
+<summary>Using Java native (from the Command Line)</summary>
+ 
 1) Define an environment variable with the path to the JavaFX "/lib" folder
-`set JAVA_HOME={path to JavaFX "lib" folder}`
+   `set JAVA_HOME={path to JavaFX "lib" folder}`
 
 2) Build the application
-`javac --module-path "%JAVAFX_HOME%" --add-modules "javafx.controls,javafx.fxml" -d ./bin  ./src/*.java`
+   `javac --module-path "%JAVAFX_HOME%" --add-modules "javafx.controls,javafx.fxml" -d ./bin  ./src/*.java`
 
 3) Run the application
-`java --module-path "%JAVAFX_HOME%" --add-modules "javafx.controls,javafx.fxml" -cp ./bin App`
+   `java --module-path "%JAVAFX_HOME%" --add-modules "javafx.controls,javafx.fxml" -cp ./bin App`
+
+</details>
 
 
-### Using Visual Studio Code
+<details>
+<summary>Using Intellij</summary>
+
+1) [Download](https://www.jetbrains.com/de-de/idea/download/) and install Intellij
+2) Add the JavaFX module to the project
+   1) Open Project Structure
+   2) Click on the "Global Libraries" tab
+   3) Click on the "Add" button
+   4) Click on Java
+   5) Navigate to the JavaFX installation folder and then to lib and select the following modules
+      - javafx-base
+      - javafx-controls
+      - javafx-fxml
+      - javafx-graphics
+      - javafx-media
+      - javafx-swing
+      - javafx-web
+3) Add a new run configuration for the application
+   1) Open Run Configurations (click on the "Run" button)
+   2) Click on the "Add" button
+   3) Click on the "Application" button
+   4) Select your Java JDK from the dropdown
+   5) Select your Main class
+   6) Click on the "Modify Options" > "VM Options" button
+   7) Add the following VM options: `--module-path {path to JavaFX "lib" folder} --add-modules javafx.controls,javafx.base,javafx.fxml,javafx.graphics,javafx.media,javafx.web --add-exports=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED --add-exports=javafx.base/com.sun.javafx.reflect=ALL-UNNAMED
+   8) Click on the "OK" button
+5) Run the application (Shift + F10)
+</details>
+
+<details>
+<summary>Using Visual Studio Code</summary>
 
 1) [Download](https://code.visualstudio.com/download) and install VS Code
 2) Install the following packages in Visual Studio Code
-  
+
 | Package Name  | Extension Id  | 
 |---|---|
 | Extension Package for Java  | vscjava.vscode-java-pack | 
@@ -53,3 +82,7 @@ Following you will find the process description for this two options
 3) Adapt the path to the JavaFX libraries in the files `.vscode/launch.json` and `.vscode/settings.json`
 4) Check if the right Java Runtime is configured (Ctrl+P and 'Configure Java Runtime')
 5) Run the application (F5 or Ctrl-F5)
+
+</details>
+
+<br>
